--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <img src="/w3images/avatar_hat.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
   <div class="w3-content w3-justify" style="max-width:600px">
     <!--<h4>My Name</h4>-->
-    <p>Hi there! My name's Liam. I'm currently studying Computer Science & Game Development major at Northeastern University. 
+    <p>Hi there! My name's Liam. I'm currently studying Computer Science & Game Development major at Northeastern University. Here's some more placeholder text just to fill up some more space. I like music and audio engineering sometimes. Here's some more stuff to take up space and make me look better. I promise I will change this soon. :)))
     </p>
     <p>liamcristello@gmail.com</p>
     <hr class="w3-opacity">
