Changes to About Paragraph

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
   <!-- Sidebar/menu -->
   <nav class="w3-sidebar w3-bar-block w3-black w3-animate-right w3-top w3-text-light-grey w3-large" style="z-index:3;width:250px;font-weight:bold;display:none;right:0;" id="mySidebar">
-    <a href="javascript:void()" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-32">CLOSE</a> 
+    <a href="javascript:void()" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">CLOSE SIDEBAR</a> 
     <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">PORTFOLIO</a> 
     <a href="about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">ABOUT ME</a> 
     <a href="resume.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">RESUME</a>
@@ -32,12 +32,12 @@
   <div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
   <!-- About section -->
-  <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
+  <div class="w3-container w3-dark-grey w3-center w3-margin-top w3-text-light-grey w3-padding-32" id="about">
     <h4><b>About Me</b></h4>
     <img style="display: block" src="Images/Liam.png" alt="Me" class="w3-image w3-half w3-padding-32" width="55%" height="55%">
-    <div class="w3-content w3-justify w3-padding-32" style="max-width:1200px; margin: auto">
+    <div class="w3-content w3-half w3-justify w3-padding-64" style="max-width:1000px; margin: auto">
       <h1 style="padding-left: 30px"> Hi there!</h1>
-      <p style="font-size: 20px">My name's Liam. I'm currently studying Computer Science & Game Development major at Northeastern University. Here's some more placeholder text just to fill up some more space. I like music and audio engineering sometimes. Here's some more stuff to take up space and make me look better. I promise I will change this soon. :)))
+      <p class="about1">My name's Liam. I'm currently studying Computer Science & Game Development major at Northeastern University. Here's some more placeholder text just to fill up some more space. I like music and audio engineering sometimes. Here's some more stuff to take up space and make me look better. I promise I will change this soon. :)))
       </p>
       <p>liamcristello@gmail.com</p>
       <!--<hr class="w3-opacity">
