Div Fix Attempt

--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
     <img style="display: block" src="Images/Liam.png" alt="Me" class="w3-image w3-half w3-padding-32" width="55%" height="55%">
     <div class="w3-content w3-half w3-justify w3-padding-64" style="max-width:1000px; margin: auto">
       <h1 style="padding-left: 30px"> Hi there!</h1>
-      <p class="about1">My name's Liam. I'm currently studying Computer Science & Game Development major at Northeastern University. Here's some more placeholder text just to fill up some more space. I like music and audio engineering sometimes. Here's some more stuff to take up space and make me look better. I promise I will change this soon. :)))
-      </p>
+      <div class="about1">My name's Liam. I'm currently studying Computer Science & Game Development major at Northeastern University. Here's some more placeholder text just to fill up some more space. I like music and audio engineering sometimes. Here's some more stuff to take up space and make me look better. I promise I will change this soon. :)))
+      </div>
       <p>liamcristello@gmail.com</p>
       <!--<hr class="w3-opacity">
       <h4 class="w3-padding-16">Technical Skills</h4>
