--- a/about.html
+++ b/about.html
@@ -32,69 +32,17 @@
   <div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
   <!-- About section -->
+  <div class="w3-main w3-content" style="max-width:1600px;margin-top:85px">
   <div class="w3-container w3-dark-grey w3-center w3-margin-top w3-text-light-grey w3-padding-32" id="about">
-    <h4><b>About Me</b></h4>
-    <img style="display: block" src="Images/Liam.png" alt="Me" class="w3-image w3-half w3-padding-32" width="55%" height="55%">
+    <h4 class="about-heading"><b>About Me</b></h4>
+    <img style="display: block; padding-left: 40px" src="Images/Liam.png" alt="Me" class="w3-image w3-half w3-padding-32" width="55%" height="55%">
     <div class="w3-content w3-half w3-justify w3-padding-64" style="max-width:1000px; margin: auto">
-      <h1 style="padding-left: 30px"> Hi there!</h1>
-      <div class="about1">My name's Liam. I'm currently studying Computer Science & Game Development major at Northeastern University. Here's some more placeholder text just to fill up some more space. I like music and audio engineering sometimes. Here's some more stuff to take up space and make me look better. I promise I will change this soon. :)))
-      </div>
-      <p>liamcristello@gmail.com</p>
-      <!--<hr class="w3-opacity">
-      <h4 class="w3-padding-16">Technical Skills</h4>
-      <p class="w3-wide">Photography</p>
-      <div class="w3-white">
-        <div class="w3-container w3-padding-small w3-center w3-grey" style="width:3%">95%</div>
-      </div>
-      <p class="w3-wide">Web Design</p>
-      <div class="w3-white">
-        <div class="w3-container w3-padding-small w3-center w3-grey" style="width:2%">85%</div>
-      </div>
-      <p class="w3-wide">Photoshop</p>
-      <div class="w3-white">
-        <div class="w3-container w3-padding-small w3-center w3-grey" style="width:1%">80%</div>
-      </div>
-      <p><button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom w3-hover-black">Download Resume</button></p>
-      <hr class="w3-opacity">
-
-      <h4 class="w3-padding-16">How much I charge</h4>
-      <div class="w3-row-padding" style="margin:0 -16px">
-        <div class="w3-half w3-margin-bottom">
-          <ul class="w3-ul w3-white w3-center">
-            <li class="w3-black w3-xlarge w3-padding-32">Basic</li>
-            <li class="w3-padding-16">Web Design</li>
-            <li class="w3-padding-16">Photography</li>
-            <li class="w3-padding-16">5GB Storage</li>
-            <li class="w3-padding-16">Mail Support</li>
-            <li class="w3-padding-16">
-              <h2>$ 10</h2>
-              <span class="w3-opacity">per month</span>
-            </li>
-            <li class="w3-light-grey w3-padding-24">
-              <button class="w3-button w3-white w3-padding-large">Sign Up</button>
-            </li>
-          </ul>
-        </div>
-        
-        <div class="w3-half">
-          <ul class="w3-ul w3-white w3-center">
-            <li class="w3-black w3-xlarge w3-padding-32">Pro</li>
-            <li class="w3-padding-16">Web Design</li>
-            <li class="w3-padding-16">Photography</li>
-            <li class="w3-padding-16">50GB Storage</li>
-            <li class="w3-padding-16">Endless Support</li>
-            <li class="w3-padding-16">
-              <h2>$ 25</h2>
-              <span class="w3-opacity">per month</span>
-            </li>
-            <li class="w3-light-grey w3-padding-24">
-              <button class="w3-button w3-white w3-padding-large">Sign Up</button>
-            </li>
-          </ul>
-        </div>
-      </div>-->
+      <h1 style="padding-left: 40px"> Hi there!</h1>
+      <p class="about1">My name's Liam. I'm currently studying as a Computer Science & Game Development major at Northeastern University. I'm studying to make video games, and you can find some of my projects on the portfolio page of this website! Some were made as coursework projects, and others were made as side projects in my free time. I've worked the most with Unity3D, but haave also done some work with Unreal Engine 4. I like music and audio engineering sometimes. Here's some more stuff to take up space and make me look better. I promise I will change this soon. :)))
+      </p>
     </div>
   </div> 
+  </div>
 
   <!--Sidebar script-->
   <script>
