Portfolio Changes, Other Pages Coloration
Changed coloration of other pages to match Portfolio page. Portfolio also now has a working hyperlink image.

--- a/sleepy-jeoff.html
+++ b/sleepy-jeoff.html
@@ -11,6 +11,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js%22%3E"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js%22%3E"> </script>
 </head>
-<body class="w3-light-grey">
-	
+<body class="w3-light-blue">
+
 </body>
