--- a/about.html
+++ b/about.html
@@ -11,10 +11,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js%22%3E"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js%22%3E"> </script>
 </head>
-<body class="w3-light-grey">
-
+<body class="w3-light-blue">
   <!-- Sidebar/menu -->
-  <nav class="w3-sidebar w3-bar-block w3-black w3-animate-right w3-top w3-text-light-grey w3-large" style="z-index:3;width:250px;font-weight:bold;display:none;right:0;" id="mySidebar">
+  <nav class="w3-sidebar w3-bar-block w3-light-blue w3-animate-right w3-top w3-text-light-grey w3-large" style="z-index:3;width:250px;font-weight:bold;display:none;right:0;" id="mySidebar">
     <a href="javascript:void()" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">CLOSE SIDEBAR</a> 
     <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">PORTFOLIO</a> 
     <a href="about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">ABOUT ME</a> 
@@ -23,17 +22,17 @@
   </nav>
 
   <!-- Top menu on small screens -->
-  <header class="w3-container w3-top w3-white w3-xlarge w3-padding-16">
+  <header class="w3-container w3-top w3-blue w3-xlarge w3-padding-16">
     <span class="w3-left w3-padding">LIAM CRISTELLO</span>
-    <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
+    <a href="javascript:void(0)" class="w3-right w3-button w3-blue" onclick="w3_open()">☰</a>
   </header>
 
   <!-- Overlay effect when opening sidebar on small screens -->
   <div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
   <!-- About section -->
-  <div class="w3-main w3-content" style="max-width:1600px;margin-top:85px">
-  <div class="w3-container w3-dark-grey w3-center w3-margin-top w3-text-light-grey w3-padding-32" id="about">
+  <div class="w3-main w3-content" style="max-width:1600px;margin-top:84px">
+  <div class="w3-container w3-light-blue w3-center w3-margin-top w3-text-dark-grey w3-padding-32" id="about">
     <h4 class="about-heading"><b>About Me</b></h4>
     <img style="display: block; padding-left: 40px" src="Images/Liam.png" alt="Me" class="w3-image w3-half w3-padding-32" width="55%" height="55%">
     <div class="w3-content w3-half w3-justify w3-padding-64" style="max-width:1000px; margin: auto">
