--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<head>
-<html lang="en">
-<title>Liam Cristello</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
-.w3-quarter img{margin-bottom: -6px; cursor: pointer}
-.w3-quarter img:hover{opacity: 0.6; transition: 0.3s}
-</style>
+	<head>
+	<html lang="en">
+	<title>Liam Cristello</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css%22%3E">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js%22%3E"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js%22%3E"> </script>
 </head>
-<body class="w3-light-grey">
-
+<body class="w3-light-blue">
 	<!-- Sidebar/menu -->
 	<nav class="w3-sidebar w3-bar-block w3-black w3-animate-right w3-top w3-text-light-grey w3-large" style="z-index:3;width:250px;font-weight:bold;display:none;right:0;" id="mySidebar">
 	  <a href="javascript:void()" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">CLOSE SIDEBAR</a> 
@@ -24,16 +22,16 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	</nav>
 
 	<!-- Top menu on small screens -->
-	<header class="w3-container w3-top w3-white w3-xlarge w3-padding-16">
+	<header class="w3-container w3-top w3-blue w3-xlarge w3-padding-16">
 	  <span class="w3-left w3-padding">LIAM CRISTELLO</span>
-	  <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
+	  <a href="javascript:void(0)" class="w3-right w3-button w3-blue" onclick="w3_open()">☰</a>
 	</header>
 
 	<!-- Overlay effect when opening sidebar on small screens -->
 	<div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 	<!-- Contact section -->
-	  <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="contact">
+	  <div class="w3-container w3-indigo w3-padding-32 w3-padding-large" id="contact">
 	    <div class="w3-content" style="max-width:600px">
 	      <h4 class="w3-center"><b>Contact Me</b></h4>
 	      <p>Want to reach out? Feel free to contact me!</p>
