Quick Change To Top Bar
For mobile devices.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<!-- Top menu on small screens -->
 	<header class="w3-container w3-top w3-blue w3-xlarge w3-padding-16">
-		<span class="w3-left w3-padding">LIAM CRISTELLO - Game Designer, Programmer, Audio Engineer</span>
+		<span class="w3-left w3-padding">LIAM CRISTELLO</span>
 		<a href="javascript:void(0)" class="w3-right w3-button w3-blue" onclick="w3_open()">☰</a>
 	</header>
 
