--- a/index.html
+++ b/index.html
@@ -37,36 +37,36 @@
 		<div class="w3-row">
 			<div class="w3-third w3-padding">
 				<div class="">
-					<a href=sleepy-jeoff.html>
-						<img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Sleepy Jeoff">
-						<h3 class="w3-center">Sleepy Jeoff</h3>
+					<a href=bird-brigade.html>
+						<img src="Images/BirdBrigadeLogo.png" style="width:100%" onclick="onClick(this)" alt="Bird Brigade">
+						<h3 class="w3-center">Bird Brigade</h3>
 						<p class="w3-center">Programming, Asset Integration, Game Design</p>
 					</a>
 				</div>
-				<div class="">
-					<a href=sleepy-jeoff.html>
-						<img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Sleepy Jeoff">
-						<h3 class="w3-center">Sleepy Jeoff</h3>
+				<!--<div class="">
+					<a href=bird-brigade.html>
+						<img src="Images/BirdBrigadeLogo.png" style="width:100%" onclick="onClick(this)" alt="Bird Brigade">
+						<h3 class="w3-center">Bird Brigade</h3>
 						<p class="w3-center">Programming, Asset Integration, Game Design</p>
 					</a>
-				</div>
+				</div>-->
 			</div>
-			    
+
 			<div class="w3-third w3-padding">
 				<div class="">
-					<a href=bird-brigade.html>
-						<img src="Images/BirdBrigadeLogo.png" style="width:100%" onclick="onClick(this)" alt="Bird Brigade">
-						<h3 class="w3-center">Bird Brigade</h3>
+					<a href=sleepy-jeoff.html>
+						<img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Sleepy Jeoff">
+						<h3 class="w3-center">Sleepy Jeoff</h3>
 						<p class="w3-center">Programming, Asset Integration, Game Design</p>
 					</a>
 				</div>
-				<div class="">
-					<a href=bird-brigade.html>
-						<img src="Images/BirdBrigadeLogo.png" style="width:100%" onclick="onClick(this)" alt="Bird Brigade">
-						<h3 class="w3-center">Bird Brigade</h3>
+				<!--<div class="">
+					<a href=sleepy-jeoff.html>
+						<img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Sleepy Jeoff">
+						<h3 class="w3-center">Sleepy Jeoff</h3>
 						<p class="w3-center">Programming, Asset Integration, Game Design</p>
 					</a>
-				</div>
+				</div>-->
 			</div>
 			    
 			<div class="w3-third w3-padding">
@@ -77,13 +77,13 @@
 						<p class="w3-center">Music</p>
 					</a>
 				</div>
-				<div class="">
+				<!--<div class="">
 					<a href=sos.html>
 						<img src="Images/SOSLogo.png" style="width:90%" class= "w3-center" onclick="onClick(this)" alt="Save Our Singles">
 						<h3 class="w3-center">Save Our Singles</h3>
 						<p class="w3-center">Music</p>
 					</a>
-				</div>
+				</div>-->
 			</div>
 		</div>
 
