--- a/sleepy-jeoff.html
+++ b/sleepy-jeoff.html
@@ -33,13 +33,17 @@
 	<!-- !PAGE CONTENT! -->
 	<div class="w3-main w3-content" style="max-width:1600px;margin-top:84px">
 		<div class="w3-container w3-center w3-margin-top w3-text-dark-grey w3-padding-32">
+			<!-- TITLE -->
 			<h1 class="project-page-heading">SLEEPY JEOFF</h1>
+			<!-- First Row -->
 			<div class="w3-row">
-				<div class="w3-half w3-margin-top">
+				<!-- Video/Logo -->
+				<div class="w3-content w3-half w3-center w3-margin-top">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
+				<!-- About The Game -->
 				<div class="w3-content w3-half w3-justify" style="max-width:1000px; margin: auto">
-					<h1 class="w3-center">About The Game</h1>
+					<h1 class="w3-center project-page-about">About The Game</h1>
 					<p class="w3-center w3-padding project-page-about">A 3D action game where you use the mouse to pick up and move objects around Jeoff's room. Use objects to affect Jeoff's path to guide him back to his bed! The objects can also be used to deflect enemies like Jeoff's cat, dog, and vacuum cleaner.</p>
 					<a href=https://globalgamejam.org/2019/games/sleepy-jeoff>
 						<img src="Images/GGJLogo.png" style="width:20%" onclick="onClick(this)" class="center" alt="GGJLogo">
@@ -47,24 +51,34 @@
 					</a>
 				</div>
 			</div>
-			<div class="w3-row">
+			<!-- Second Row -->
+			<div class="w3-row w3-margin-top">
+				<!-- Role(s) -->
 				<div class="w3-third">
-					<h1>Roles</h1>
+					<h2 class="project-page-heading">Roles</h2>
 					<p class="w3-center project-page-about">Programming</p>
 					<p class="w3-center project-page-about">Asset Integration</p>
 					<p class="w3-center project-page-about">Game Design</p>
 				</div>
+				<!-- Engine -->
 				<div class="w3-third">
-					<h1>Engine</h1>
+					<h2 class="project-page-heading">Engine</h2>
 					<p class="w3-center project-page-about">Unity</p>
 				</div>
+				<!-- Contribution(s) -->
 				<div class="w3-third">
-					<h1>Contributions</h1>
+					<h2 class="project-page-heading">Contributions</h2>
 					<p class="w3-center project-page-about">Scripted player input to use mouse-clicks to interact with a computer-controlled character through items in scene</p>
 					<p class="w3-center project-page-about">Scripted enemy controller AI for various enemy types</p>
 					<p class="w3-center project-page-about">Integrated art and sound assets</p>
 				</div>
 			</div>
+			<!-- About the Process -->
+			<div class="w3-row w3-margin-top">
+				<h1 class="project-page-about">About The Process</h1>
+				<p class="project-page-about">This is probably the game I am the proudest to have worked on. I attended the 2019 Global Game Jam site at Northeastern University, and made a group with other developers there. I was one of two programmers, with a friend of mine. We worked with 3 digital artists from Massachusetts College of Art and Design, and a sound designer/composer from Berklee College of Music. Being one of two main programmers was stressful at points, but it also forced me to learn how to take on a sizeable amount of responsibility. Additionally, I learned a lot about working with artists to integrate assets to make our game look and sound good. Overall, it was a really great experience and I think we ended up with a lovely end product!</p>
+			</div>
+			<!-- Misc. pics of game -->
 			<div class="w3-row w3-margin-top">
 				<div class="w3-half w3-padding">
 					<img src="Images/SleepyJeoffPic1.png" style="width:100%" onclick="onClick(this)" class="center" alt="SleepyJeoffPic1">
