--- a/sleepy-jeoff.html
+++ b/sleepy-jeoff.html
@@ -76,7 +76,7 @@
 			<!-- About the Process -->
 			<div class="w3-row w3-margin-top">
 				<h1 class="project-page-about">About The Process</h1>
-				<p class="project-page-about">This is probably the game I am the proudest to have worked on. I attended the 2019 Global Game Jam site at Northeastern University, and made a group with other developers there. I was one of two programmers, with a friend of mine. We worked with 3 digital artists from Massachusetts College of Art and Design, and a sound designer/composer from Berklee College of Music. Being one of two main programmers was stressful at points, but it also forced me to learn how to take on a sizeable amount of responsibility. Additionally, I learned a lot about working with artists to integrate assets to make our game look and sound good. Overall, it was a really great experience and I think we ended up with a lovely end product!</p>
+				<p class="project-page-about-process">This is probably the game I am the proudest to have worked on. I attended the 2019 Global Game Jam site at Northeastern University, and made a group with other developers there. I was one of two programmers, with a friend of mine. We worked with 3 digital artists from Massachusetts College of Art and Design, and a sound designer/composer from Berklee College of Music. Being one of two main programmers was stressful at points, but it also forced me to learn how to take on a sizeable amount of responsibility. Additionally, I learned a lot about working with artists to integrate assets to make our game look and sound good. Overall, it was a really great experience and I think we ended up with a lovely end product!</p>
 			</div>
 			<!-- Misc. pics of game -->
 			<div class="w3-row w3-margin-top">
