--- a/resume.html
+++ b/resume.html
@@ -31,6 +31,17 @@
 	<!-- Overlay effect when opening sidebar on small screens -->
 	<div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
+	<a href="PDF/Liam_Cristello_Resume.pdf" download>
+		<p style = "text-align: center">Click here to download!</p>
+	</a>
+
+	<div class="w3-center">
+		<embed src="PDF/Liam_Cristello_Resume.pdf" width="1200px" height="800px"./>
+	</div>
+
+	<footer class="w3-container w3-center">
+		
+	</footer>
 
 	<!--Sidebar script-->
 	<script>
