Change to Resume page

--- a/sleepy-jeoff.html
+++ b/sleepy-jeoff.html
@@ -38,8 +38,10 @@
 			<!-- First Row -->
 			<div class="w3-row">
 				<!-- Video/Logo -->
-				<div class="w3-content w3-half w3-center w3-margin-top">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<div class="w3-half">
+					<div class="video-responsive">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 				</div>
 				<!-- About The Game -->
 				<div class="w3-content w3-half w3-justify" style="max-width:1000px; margin: auto">
