--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
 	<!-- !PAGE CONTENT! -->
 	<div class="w3-main w3-content" style="max-width:1600px;margin-top:90px">
 		<a href="PDF/Liam_Cristello_Resume.pdf" download>
-			<h1 style = "text-align: center">Click here to download!</h1>
+			<h1 style = "text-align: center">If the viewer does not work, feel free to download my resume here!</h1>
 		</a>
 
 		<!--<div class="w3-center">
