Bird Brigade mostly complete
Need itch download

--- a/bird-brigade.html
+++ b/bird-brigade.html
@@ -31,49 +31,65 @@
 	<div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 	<!-- !PAGE CONTENT! -->
-	<div class="w3-main w3-content" style="max-width:1600px;margin-top:84px">
-		<div class="w3-container w3-center w3-margin-top w3-text-dark-grey w3-padding-32">
-			<h1 class="project-page-heading">BIRD BRIGADE</h1>
+	<div class="w3-main w3-content" style="max-width:1600px;margin-top:64px">
+		<div class="w3-container w3-center w3-margin-top w3-text-black w3-padding-32">
+			<!-- TITLE -->
+			<h1 class="project-page-heading" style="margin-bottom: 20px">BIRD BRIGADE</h1>
+			<!-- First Row -->
 			<div class="w3-row">
-				<div class="w3-content w3-half w3-center w3-margin-top">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<!-- Video/Logo -->
+				<div class="w3-content w3-half">
+					<img src="GIFs/BirdBrigadeGif1.gif" alt="BirdBrigade" style="width: 100%">
 				</div>
+				<!-- About The Game -->
 				<div class="w3-content w3-half w3-justify" style="max-width:1000px; margin: auto">
 					<h1 class="w3-center project-page-about">About The Game</h1>
-					<p class="w3-center w3-padding project-page-about">A 3D action game where you use the mouse to pick up and move objects around Jeoff's room. Use objects to affect Jeoff's path to guide him back to his bed! The objects can also be used to deflect enemies like Jeoff's cat, dog, and vacuum cleaner.</p>
+					<p class="w3-center w3-padding project-page-about">A <b>2D shoot-'em-up game</b> where you <b>use the keyboard and mouse</b> to <b>dodge bullets</b> and <b>fire back</b> bullets of your own. Pick up <b>power-ups</b> to earn bonuses, such as a <b>protective shield</b> or <b>rapid-fire mode</b>! Fight <b>multiple different bosses</b>, each with their own <b>unique attack pattern</b> as you try to survive.</p>
+					<!--
 					<a href=https://globalgamejam.org/2019/games/sleepy-jeoff>
 						<img src="Images/GGJLogo.png" style="width:20%" onclick="onClick(this)" class="center" alt="GGJLogo">
-						<h3 class="w3-center">Click here to download!</h3>
-					</a>
+						<h3 class="w3-center">Click here to download from itch.io!</h3>
+					</a>-->
 				</div>
 			</div>
+			<!-- Second Row -->
 			<div class="w3-row w3-margin-top">
+				<!-- Role(s) -->
 				<div class="w3-third">
 					<h2 class="project-page-heading">Roles</h2>
+					<p class="w3-center project-page-about">UI/UX Design</p>
 					<p class="w3-center project-page-about">Programming</p>
-					<p class="w3-center project-page-about">Asset Integration</p>
-					<p class="w3-center project-page-about">Game Design</p>
+					<p class="w3-center project-page-about">Playtest Administration</p>
 				</div>
+				<!-- Engine -->
 				<div class="w3-third">
 					<h2 class="project-page-heading">Engine</h2>
 					<p class="w3-center project-page-about">Unity</p>
 				</div>
+				<!-- Contribution(s) -->
 				<div class="w3-third">
 					<h2 class="project-page-heading">Contributions</h2>
-					<p class="w3-center project-page-about">Scripted player input to use mouse-clicks to interact with a computer-controlled character through items in scene</p>
-					<p class="w3-center project-page-about">Scripted enemy controller AI for various enemy types</p>
-					<p class="w3-center project-page-about">Integrated art and sound assets</p>
+					<p class="w3-center project-page-about">Scripted health system for enemy/player interaction</p>
+					<p class="w3-center project-page-about">Designed UI/UX to communicate information to player in clear and enjoyable manner</p>
+					<p class="w3-center project-page-about">Conducted playtests with third-party users and iterated on feedback</p>
 				</div>
 			</div>
+			<!-- About the Process -->
+			<div class="w3-row w3-margin-top">
+				<h1 class="project-page-about">About The Process</h1>
+				<p class="project-page-about-process">This was a game I made for my final project in my Game Programming class. It was a semester-long project, in-between regular assignments for the class. I worked with <b>two other programmers</b> to make this game. We wanted to make a rogue-like game in the vein of <i>Enter the Gungeon</i> or <i>The Binding of Isaac</i>, but for scope purposes we ended up <b>focusing on the boss fights.</b> The <b>playtests we ran</b> with fellow classmates gave us a great idea of what we were doing well and where we could improve, and </b>we took that feedback to heart when iterating on our design.</b> I was put in charge of the <b>User Interface and User Experience features</b>, since we were told initially that our game could do a better job of communicating information to the player. I revamped our UI/UX, and our <b>future playtests went better</b> since we had <b>improved on the requested features</b>. It was a fun project to work on, and a nice way to wrap up the course!</p>
+			</div>
+			<!-- Misc. pics of game -->
 			<div class="w3-row w3-margin-top">
 				<div class="w3-half w3-padding">
-					<img src="Images/SleepyJeoffPic1.png" style="width:100%" onclick="onClick(this)" class="center" alt="SleepyJeoffPic1">
+					<img src="GIFS/BirdBrigadeGif2.gif" style="width:100%" class="center" alt="BirdBrigade">
 				</div>
 				<div class="w3-half w3-padding">
-					<img src="Images/SleepyJeoffPic2.png" style="width:100%" onclick="onClick(this)" class="center" alt="SleepyJeoffPic2">
+					<img src="GIFs/BirdBrigadeGif3.gif" style="width:100%" class="center" alt="BirdBrigade">
 				</div>
 			</div>
 		</div>
+		<div class="w3-light-grey w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
 	</div>
 
 	<script>
