--- a/index.html
+++ b/index.html
@@ -32,26 +32,19 @@
 
 	<!-- !PAGE CONTENT! -->
 	<div class="w3-main w3-content" style="max-width:1600px;margin-top:84px">
-	  
-		<!-- Photo grid -->
+		<div class=w3-row">
+			<h1 class="index-main w3-center">PROJECTS</h1>
+		</div>
 		<div class="w3-row">
 			<div class="w3-third w3-padding">
 				<div class="">
 					<a href=bird-brigade.html>
 						<img src="Images/BirdBrigadeLogo.png" style="width:100%" onclick="onClick(this)" alt="Bird Brigade">
 						<h3 class="w3-center">Bird Brigade</h3>
-						<p class="w3-center">Programming, Asset Integration, Game Design</p>
+						<p class="w3-center">UI/UX Design, Programming, Playtest Administration</p>
 					</a>
 				</div>
-				<!--<div class="">
-					<a href=bird-brigade.html>
-						<img src="Images/BirdBrigadeLogo.png" style="width:100%" onclick="onClick(this)" alt="Bird Brigade">
-						<h3 class="w3-center">Bird Brigade</h3>
-						<p class="w3-center">Programming, Asset Integration, Game Design</p>
-					</a>
-				</div>-->
 			</div>
-
 			<div class="w3-third w3-padding">
 				<div class="">
 					<a href=sleepy-jeoff.html>
@@ -60,31 +53,42 @@
 						<p class="w3-center">Programming, Asset Integration, Game Design</p>
 					</a>
 				</div>
-				<!--<div class="">
-					<a href=sleepy-jeoff.html>
-						<img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Sleepy Jeoff">
-						<h3 class="w3-center">Sleepy Jeoff</h3>
-						<p class="w3-center">Programming, Asset Integration, Game Design</p>
-					</a>
-				</div>-->
 			</div>
-			    
 			<div class="w3-third w3-padding">
 				<div class="">
-					<a href=sos.html>
-						<img src="Images/SOSLogo.png" style="width:90%" class= "w3-center" onclick="onClick(this)" alt="Save Our Singles">
-						<h3 class="w3-center">Save Our Singles</h3>
-						<p class="w3-center">Music</p>
+					<a href=spooky-cryptid-dating.html>
+						<img src="Images/SpookyCryptidDatingTitle.png" style="width:100%" class= "w3-center" onclick="onClick(this)" alt="Save Our Singles">
+						<h3 class="w3-center">Spooky Cryptid Dating</h3>
+						<p class="w3-center">Programming, Asset Integration</p>
 					</a>
 				</div>
-				<!--<div class="">
-					<a href=sos.html>
-						<img src="Images/SOSLogo.png" style="width:90%" class= "w3-center" onclick="onClick(this)" alt="Save Our Singles">
-						<h3 class="w3-center">Save Our Singles</h3>
-						<p class="w3-center">Music</p>
-					</a>
-				</div>-->
 			</div>
+		</div>
+		<div class="w3-row">
+			<div class="w3-row">
+				<div class="w3-col m2 w3-center">
+			    	<p></p>
+				</div>
+		    	<div class="w3-col m4 w3-center w3-padding">
+		    		<a href=sleepy-jeoff.html>
+						<img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Sleepy Jeoff">
+						<h3 class="w3-center">Catch And Throw</h3>
+						<h4 class="w3-center">[IN PROGRESS]</h4>
+						<p class="w3-center">Co-op/Internship Work</p>
+					</a>
+		    	</div>
+		    	<div class="w3-col m4 w3-center w3-padding">
+		      		<a href=sleepy-jeoff.html>
+						<img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Sleepy Jeoff">
+						<h3 class="w3-center">Pong & Obstacles</h3>
+						<h4 class="w3-center">[IN PROGRESS]</h4>
+						<p class="w3-center">Co-op/Internship Work</p>
+					</a>
+		    	</div>
+		    	<div class="w3-col m2 w3-center">
+		    		<p></p>
+		    	</div>
+	  		</div>
 		</div>
 
 		<!-- Footer -->
