--- a/sleepy-jeoff.html
+++ b/sleepy-jeoff.html
@@ -31,10 +31,10 @@
 	<div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 	<!-- !PAGE CONTENT! -->
-	<div class="w3-main w3-content" style="max-width:1600px;margin-top:84px">
-		<div class="w3-container w3-center w3-margin-top w3-text-dark-grey w3-padding-32">
+	<div class="w3-main w3-content" style="max-width:1600px; margin-top:64px">
+		<div class="w3-container w3-center w3-margin-top w3-text-black w3-padding-32">
 			<!-- TITLE -->
-			<h1 class="project-page-heading">SLEEPY JEOFF</h1>
+			<h1 class="project-page-heading" style="margin-bottom: 20px">SLEEPY JEOFF</h1>
 			<!-- First Row -->
 			<div class="w3-row">
 				<!-- Video/Logo -->
@@ -46,10 +46,10 @@
 				<!-- About The Game -->
 				<div class="w3-content w3-half w3-justify" style="max-width:1000px; margin: auto">
 					<h1 class="w3-center project-page-about">About The Game</h1>
-					<p class="w3-center w3-padding project-page-about">A 3D action game where you use the mouse to pick up and move objects around Jeoff's room. Use objects to affect Jeoff's path to guide him back to his bed! The objects can also be used to deflect enemies like Jeoff's cat, dog, and vacuum cleaner.</p>
+					<p class="w3-center w3-padding project-page-about">A <b>3D action game</b> where you <b>use the mouse</b> to pick up and move objects around Jeoff's room. Use objects to <b>affect Jeoff's path</b> to guide him back to his bed! The objects can also be used to <b>deflect enemies</b> like Jeoff's cat, dog, and vacuum cleaner.</p>
 					<a href=https://globalgamejam.org/2019/games/sleepy-jeoff>
 						<img src="Images/GGJLogo.png" style="width:20%" onclick="onClick(this)" class="center" alt="GGJLogo">
-						<h3 class="w3-center">Click here to download!</h3>
+						<h3 class="w3-center">Click here to download from the GGJ website!</h3>
 					</a>
 				</div>
 			</div>
@@ -78,18 +78,19 @@
 			<!-- About the Process -->
 			<div class="w3-row w3-margin-top">
 				<h1 class="project-page-about">About The Process</h1>
-				<p class="project-page-about-process">This is probably the game I am the proudest to have worked on. I attended the 2019 Global Game Jam site at Northeastern University, and made a group with other developers there. I was one of two programmers, with a friend of mine. We worked with 3 digital artists from Massachusetts College of Art and Design, and a sound designer/composer from Berklee College of Music. Being one of two main programmers was stressful at points, but it also forced me to learn how to take on a sizeable amount of responsibility. Additionally, I learned a lot about working with artists to integrate assets to make our game look and sound good. Overall, it was a really great experience and I think we ended up with a lovely end product!</p>
+				<p class="project-page-about-process">This is probably the game <b>I am the proudest to have worked on</b>. I attended the 2019 Global Game Jam site at Northeastern University, and made a group with other developers there. I was <b>one of two programmers</b>, with a friend of mine. We worked with <b>3 digital artists</b> from Massachusetts College of Art and Design, and a <b>sound designer/composer</b> from Berklee College of Music. Being one of two main programmers was stressful at points, but it also forced me to learn how to take on a <b>sizeable amount of responsibility</b>. Additionally, I learned a lot about <b>working with artists to integrate assets</b> to make our game look and sound good. Overall, it was a really great experience and I think we ended up with a lovely end product!</p>
 			</div>
 			<!-- Misc. pics of game -->
 			<div class="w3-row w3-margin-top">
 				<div class="w3-half w3-padding">
-					<img src="Images/SleepyJeoffPic1.png" style="width:100%" onclick="onClick(this)" class="center" alt="SleepyJeoffPic1">
+					<img src="Images/SleepyJeoffPic1.png" style="width:100%" class="center" alt="SleepyJeoff">
 				</div>
 				<div class="w3-half w3-padding">
-					<img src="Images/SleepyJeoffPic2.png" style="width:100%" onclick="onClick(this)" class="center" alt="SleepyJeoffPic2">
+					<img src="Images/SleepyJeoffPic2.png" style="width:100%" class="center" alt="SleepyJeoff">
 				</div>
 			</div>
 		</div>
+		<div class="w3-light-grey w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
 	</div>
 
 	<script>
