--- a/about.html
+++ b/about.html
@@ -30,19 +30,22 @@
   <!-- Overlay effect when opening sidebar on small screens -->
   <div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
-  <!-- About section -->
+  <!-- PAGE CONTENT -->
   <div class="w3-main w3-content" style="max-width:1600px;margin-top:84px">
-  <div class="w3-container w3-center w3-margin-top w3-text-dark-grey w3-padding-32" id="about">
-    <h4 class="about-heading"><b>About Me</b></h4>
-    <img style="display: block" src="Images/Liam.png" alt="Me" class="w3-image w3-half w3-center w3-padding-32" width="55%" height="55%">
-    <div class="w3-content w3-half w3-justify w3-padding-64" style="max-width:1000px; margin: auto">
-      <h1 class="w3-center"> Hi there!</h1>
-      <p class="about1">My name's Liam. I'm currently studying as a Computer Science & Game Development major at Northeastern University. I'm studying to make video games, and you can find some of my projects on the portfolio page of this website! Some were made as coursework projects, and others were made as side projects in my free time.
-      </p>
-      <p class="about1">I've worked the most with Unity3D, but have also done some work with Unreal Engine 4.</p>
-      <p class="about1">I like music and audio engineering sometimes. Here's some more stuff to take up space and make me look better. I promise I will change this soon. :)))</p>
-    </div>
-  </div> 
+    <div class="w3-container w3-center w3-margin-top w3-text-dark-grey w3-padding-32" id="about">
+      <h4 class="about-heading"><b>About Me</b></h4>
+      <img style="display: block" src="Images/Liam.png" alt="Me" class="w3-image w3-half w3-center w3-padding-32" width="80%" height="80%">
+      <div class="w3-content w3-half w3-justify w3-padding-32" style="max-width:1000px; margin: auto">
+        <h1 class="w3-center"> Hi there!</h1>
+        <p class="about1">My name's Liam. I'm currently studying as a Computer Science & Game Development major at Northeastern University. I'm studying to make video games, and you can find some of my projects on the portfolio page of this website! Some were made as coursework projects, and others were made as side projects in my free time. I'm an active member of Northeastern University's Game Development Club, and am always looking for new projects to work on!
+        </p>
+        <p class="about1">Programming is the discipline I have the most practice in. I've worked the most with Unity, but have also done some work with Ren'Py and the Unreal Engine 4. Many of my projects were made at game jams, which are brief events, usually about 48 hours, in which you and a team try to make as much of a game as you can. I find these to be really fun challenges that force me to get creative and let me practice my teamwork and communication skills, as I often work with new people I've just met.
+        </p>
+        <p class="about1">In my free time, I also love music. I play piano, guitar, and trumpet, the last of which I play in Northeastern University's Pep Band! I've done some music and audio engineering work for games before, and am always looking to get more experience!
+        </p>
+      </div>
+    </div> 
+    <div class="w3-light-grey w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
   </div>
 
   <!--Sidebar script-->
