--- a/resume.html
+++ b/resume.html
@@ -50,6 +50,7 @@
 		<footer class="w3-container w3-center">
 
 		</footer>
+		<div class="w3-light-grey w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
 	</div>
 
 	<!--Sidebar script-->
