Trying test again

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 	<div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 	<!-- !PAGE CONTENT! -->
-	<div class="w3-main w3-content" style="max-width:1600px;margin-top:84px">
-		<div class=w3-row">
+	<div class="w3-main w3-content" style="max-width:1920px;margin-top:84px">
+		<div class="w3-row">
 			<h1 class="index-main w3-center">PROJECTS</h1>
 		</div>
 		<div class="w3-row">
